Poprawa dodawania plików / Obsługa skrzynki mailowej

--- a/Projekt/Pages/Email/SendEmail.cshtml
+++ b/Projekt/Pages/Email/SendEmail.cshtml
@@ -33,12 +33,12 @@
 
 <div class="text-center font-style">
     <form method="post">
-        <label class="input" asp-for="Mail.ReceiverId"></label>
-        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Wprowadź email adresata" asp-for="Mail.ReceiverId" />
-        <label class="input" asp-for="Mail.Title"></label>
-        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Wprowadź tytuł" asp-for="Mail.Title" />
-        <label class="input" asp-for="Mail.Content"></label>
-        <textarea class="form-control input-desc" placeholder="Wprowadź opis zwierzaka" asp-for=Mail.Content></textarea>
+        <label class="input" asp-for="Letterbox.ReceiverId"></label>
+        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Wprowadź email adresata" asp-for="Letterbox.ReceiverId" />
+        <label class="input" asp-for="Letterbox.Title"></label>
+        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Wprowadź tytuł" asp-for="Letterbox.Title" />
+        <label class="input" asp-for="Letterbox.Content"></label>
+        <textarea class="form-control input-desc" placeholder="Wprowadź opis zwierzaka" asp-for=Letterbox.Content></textarea>
         <button type="submit" class="btn btn-primary submit">Zatwierdź</button>
     </form>
 </div>
