--- a/Projekt/Pages/Shared/_Layout.cshtml
+++ b/Projekt/Pages/Shared/_Layout.cshtml
@@ -22,9 +22,6 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
-                        </li>
                         <li>
                             <a class="nav-link text-dark" asp-area="" asp-page="/WorkSchedule">Rozkład pracy</a>
                         </li>
@@ -35,7 +32,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Report/Index">Zarządzaj zgłoszeniami</a>
                         </li>
                         <li>
-                            <a class="nav-link text-dark" asp-area="" asp-page="/SendEmail">Wyślij email</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Email/Index">Skrzynka Odbiorcza</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
