--- a/Projekt/Pages/Index.cshtml
+++ b/Projekt/Pages/Index.cshtml
@@ -60,7 +60,7 @@
     .comments{
         border-style: ridge;
         border-radius: 25px;
-        padding: 0px 20px;
+        padding: 15px 20px;
     }
 </style>
 
@@ -70,6 +70,7 @@
 
 <div class="text-center post">
     <link rel="stylesheet" href="~/css/Buttons.css" />
+    <link rel="stylesheet" href="~/css/Border.css" />
     @if (Model.Animals != null)
     {
         <ul>
