--- a/Projekt/Pages/Index.cshtml
+++ b/Projekt/Pages/Index.cshtml
@@ -83,7 +83,7 @@
                     <h4 style="float: left;"><b>Opis:</b> @element.Description</h4>
                     <br>
                     <div class="text-center distance">
-                        <img src="@element.FilePath">
+                        @*<img src="@element.FilePath">*@
                         <br>
                         <div class="distance">
                             <form method="post">
