--- a/Projekt/Pages/Report/Edit.cshtml
+++ b/Projekt/Pages/Report/Edit.cshtml
@@ -78,8 +78,12 @@
                 <span asp-validation-for="Animals.Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Animals.FilePath" class="control-label distance"></label><br />
-                <img src="/@Model.Animals.FilePath">
+                <label asp-for="Animals.FilePaths" class="control-label distance"></label><br />
+                @foreach(var item in Model.FileEntities)
+                {
+                    <img src="./@item.FilePath">
+                    <br />
+                }             
             </div>
             <div class="form-group distance">
                 <label asp-for="Animals.ReportDate" class="control-label" hidden></label>
