--- a/Projekt/Pages/Email/SendEmail.cshtml
+++ b/Projekt/Pages/Email/SendEmail.cshtml
@@ -28,8 +28,20 @@
         top: 0;
     }
 
+    #button1 {
+        background-color: #1873f2
+    }
+
     #button3 {
         background-color: #9dacc2;
+    }
+
+    .left-size {
+        float: left;
+    }
+    
+    .inner {
+        display: inline-block;
     }
 </style>
 
@@ -38,15 +50,17 @@
 <div class="text-center font-style">
     <link rel="stylesheet" href="~/css/Buttons.css" />
     <form method="post">
-        <label class="input" asp-for="Letterbox.ReceiverId"></label>
-        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Wprowadź email adresata" asp-for="Letterbox.ReceiverId" />
-        <label class="input" asp-for="Letterbox.Title"></label>
-        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Wprowadź tytuł" asp-for="Letterbox.Title" />
-        <label class="input" asp-for="Letterbox.Content"></label>
-        <textarea class="form-control input-desc" placeholder="Wprowadź opis zwierzaka" asp-for=Letterbox.Content></textarea>
-        <button type="submit" class="btn btn-primary submit">Zatwierdź</button>
         <div>
-            <button type="submit" id="button3" class="button inner" asp-page-handler="Return"><span>Powrót </span></button>
+            <label class="input" asp-for="Letterbox.ReceiverId"></label>
+            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Wprowadź email adresata" asp-for="Letterbox.ReceiverId" />
+            <label class="input" asp-for="Letterbox.Title"></label>
+            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Wprowadź tytuł" asp-for="Letterbox.Title" />
+            <label class="input" asp-for="Letterbox.Content"></label>
+            <textarea class="form-control input-desc" placeholder="Treść" asp-for=Letterbox.Content></textarea><br />    
+        </div>
+        <div>
+            <button type="submit" id="button1" class="button inner submit"><span>Zatwierdź</span></button>
+            <button type="submit" id="button3" class="button inner left-size" asp-page-handler="Return"><span>Powrót </span></button>
         </div>
     </form>
 </div>
