--- a/Projekt/Pages/Report/Edit.cshtml
+++ b/Projekt/Pages/Report/Edit.cshtml
@@ -38,7 +38,7 @@
         marign: 5px 0px;
     }
 
-    .button-distance{
+    .button-distance {
         margin: 40px 0px 0px;
     }
 
@@ -50,7 +50,8 @@
         width: 100%;
         text-align: left;
     }
-    .font-family{
+
+    .font-family {
         font-family: 'Space Mono', monospace;
     }
 </style>
@@ -79,11 +80,27 @@
             </div>
             <div class="form-group">
                 <label asp-for="Animals.FilePaths" class="control-label distance"></label><br />
-                @foreach(var item in Model.FileEntities)
-                {
-                    <img src="./@item.FilePath">
-                    <br />
-                }             
+                <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="/2Bee_Happy_Emote.webp" class="d-block w-100">
+                        </div>
+                        @foreach (var item in Model.FileEntities)
+                        {
+                            <div class="carousel-item">
+                                <img src="/@item.FilePath" class="d-block w-100">
+                            </div>
+                        }
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
             </div>
             <div class="form-group distance">
                 <label asp-for="Animals.ReportDate" class="control-label" hidden></label>
