--- a/Projekt/Pages/Report/Edit.cshtml
+++ b/Projekt/Pages/Report/Edit.cshtml
@@ -10,16 +10,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
 
 <style>
-    img {
-        max-width: 75%;
-    }
-
     .distance {
         margin: 15px 0px;
     }
 
     button {
-        margin 20px 0px;
+        margin: 20px 0px;
     }
 
     #button1 {
@@ -54,6 +50,22 @@
     .font-family {
         font-family: 'Space Mono', monospace;
     }
+
+    .carousel-control-next,
+    .carousel-control-prev /*, .carousel-indicators */ {
+        filter: invert(100%);
+    }
+
+    img {
+        width: 50%;
+        height: auto;
+    }
+
+    .carouselImg img {
+        width: auto;
+        height: 225px;
+        max-height: 225px;
+    }
 </style>
 
 <div class="font-family">
@@ -78,30 +90,7 @@
                 <input asp-for="Animals.Description" class="form-control" disabled />
                 <span asp-validation-for="Animals.Description" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Animals.FilePaths" class="control-label distance"></label><br />
-                <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="/2Bee_Happy_Emote.webp" class="d-block w-100">
-                        </div>
-                        @foreach (var item in Model.FileEntities)
-                        {
-                            <div class="carousel-item">
-                                <img src="/@item.FilePath" class="d-block w-100">
-                            </div>
-                        }
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
-            </div>
+
             <div class="form-group distance">
                 <label asp-for="Animals.ReportDate" class="control-label" hidden></label>
                 <input asp-for="Animals.ReportDate" class="form-control" disabled hidden />
@@ -114,22 +103,59 @@
             </div>
             <div class="btn-group button-distance">
                 <div class="form-group">
-                    <button type="submit" id="button1" class="button inner" asp-page-handler="Accept" name="id" value="@Model.Animals.Id"><span>Zatwierdź </span></button>
+                    <button type="submit" id="button1" class="button inner" asp-page-handler="Accept" name="id" value="@Model.Animals.Id">
+                        <span>Zatwierdź </span>
+                    </button>
                 </div>
                 <div class="form-group">
-                    <button type="submit" id="button2" class="button inner" asp-page-handler="Reject" name="id" value="@Model.Animals.Id"><span>Odrzuć </span></button>
+                    <button type="submit" id="button2" class="button inner" asp-page-handler="Reject" name="id" value="@Model.Animals.Id">
+                        <span>Odrzuć </span>
+                    </button>
                 </div>
                 <div>
-                    <button type="submit" id="button3" class="button inner" asp-page-handler="Return"><span>Powrót </span></button>
+                    <button type="submit" id="button3" class="button inner" asp-page-handler="Return">
+                        <span>Powrót </span>
+                    </button>
                 </div>
             </div>
 
         </form>
     </div>
+    <div class="col-md-8 font-family">
+        <div class="form-group">
+            <label asp-for="Animals.FilePaths" class="control-label distance"></label>
+
+            <div id="carouselExample" class="carousel slide w-100 h-100 text-center" data-bs-ride="carousel" data-bs-interval="false">
+                <div class="carousel-inner text-center">
+                    @{
+                        Boolean first = true;
+                    }
+                    @foreach (var item in Model.FileEntities)
+                    {
+                        <div class="carousel-item @( first ? "active" : "" )">
+                            <div class="d-flex justify-content-center w-100 h-100 carouselImg">
+                                <img class="d-block w-40 center-block" src="/@item.FilePath" alt="First slide">
+                            </div>
+                        </div>
+
+                        first = false;
+                    }
+                </div>
+                <button class="carousel-control-prev" data-bs-target="#carouselExample" type="button" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" data-bs-target="#carouselExample" type="button" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+    </div>
 </div>
 
 @section Scripts {
     @{
-    await Html.RenderPartialAsync("_ValidationScriptsPartial");
-}
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
