Zatwierdzanie obowiązków + nieco poprawiony html

--- a/Projekt/Pages/JobSchedule.cshtml
+++ b/Projekt/Pages/JobSchedule.cshtml
@@ -32,13 +32,13 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Jobs[0].JobStartDate)
+                Start
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Jobs[0].JobEndDate)
+                Koniec
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Jobs[0].Responsibility)
+                Obowiązek
             </th>
             <th></th>
         </tr>
@@ -47,8 +47,6 @@
     <tbody> 
         @foreach (var item in Model.Jobs)
         {
-            @if (@item.WorkerMail==null)
-            {
                 <tr>
                     <td>
                         @Html.DisplayFor(modelItem => item.JobStartDate)
@@ -60,12 +58,16 @@
                         @Html.DisplayFor(modelItem => item.Responsibility)
                     </td>
                     <td>
-                        {
-                        <a asp-page="./AddResponsibility" asp-route-id="@item.Id">Wybierz</a>
-                        }
-                    </td>
+                     @if (@item.WorkerMail==null)
+                     {
+                        <a asp-page="./AddResponsibility" asp-route-id="@item.Id"><input type="submit" value="Wybierz" class="btn btn-primary" /></a>
+                    }
+                    else
+                    {
+                        <button type="button" class="btn btn-secondary" style="pointer-events: none;">Zarezerwowane</button>
+                    }
+                </td>
                 </tr>
-            }
         }
     </tbody>
 </table>
