--- a/Projekt/Pages/Shared/_Layout.cshtml
+++ b/Projekt/Pages/Shared/_Layout.cshtml
@@ -40,6 +40,9 @@
                         <li>
                             <a class="nav-link text-dark" asp-area="" asp-page="/Responsibilities/WorkerResponsibilities">Twoje obowiązki</a>
                         </li>
+                        <li>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/ManageResponsibilities/ApproveResponsibility">Akceptuj Obowiazki</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
