--- a/Projekt/Pages/AddResponsibility.cshtml
+++ b/Projekt/Pages/AddResponsibility.cshtml
@@ -16,19 +16,19 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Job.JobStartDate)
+            Start:
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Job.JobStartDate)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Job.JobEndDate)
+            Koniec:
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Job.JobEndDate)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Job.Responsibility)
+            Obowiązek:
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Job.Responsibility)
@@ -37,7 +37,8 @@
 
     <form method="post">
         <input type="hidden" asp-for="Job.Id" />
-        <input type="submit" value="Add" class="btn btn-danger" /> |
-        <a asp-page="./JobSchedule">Back to List</a>
+        <input type="submit" value="Tak" class="btn btn-primary" />
+
+        <a asp-page="./JobSchedule">Wróć <class="btn btn-light" /></a>
     </form>
 </div>
