--- a/Projekt/Pages/Responsibilities/CancelResponsibility.cshtml
+++ b/Projekt/Pages/Responsibilities/CancelResponsibility.cshtml
@@ -16,19 +16,19 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            Start
+            @Html.DisplayNameFor(model => model.Job.JobStartDate)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Job.JobStartDate)
         </dd>
         <dt class="col-sm-2">
-            Koniec
+            @Html.DisplayNameFor(model => model.Job.JobEndDate)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Job.JobEndDate)
         </dd>
         <dt class="col-sm-2">
-            Obowiązek
+            @Html.DisplayNameFor(model => model.Job.Responsibility)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Job.Responsibility)
@@ -38,6 +38,6 @@
     <form method="post">
         <input type="hidden" asp-for="Job.Id" />
         <input type="submit" value="Cancel" class="btn btn-danger" /> |
-        <a asp-page="./WorkerResponsibilities">Wróć <class="btn btn-light" /></a>
+        <a asp-page="./Responsibilities/WorkerResponsibility">Wróć</a>
     </form>
 </div>
