--- a/Projekt/Pages/ManageResponsibilities/DeleteApplication.cshtml
+++ b/Projekt/Pages/ManageResponsibilities/DeleteApplication.cshtml
@@ -42,6 +42,9 @@
     </dl>
 
     <form method="post">
+        <label class="input" asp-for="Letterbox.Content"></label>
+        <textarea class="form-control input-desc" required placeholder="Powód odrzucenia zgłoszenia" asp-for=Letterbox.Content></textarea><br />    
+       
         <input type="hidden" asp-for="Job.Id" />
         <input type="submit" value="Tak" class="btn btn-danger" /> |
         <a asp-page="./ApproveResponsibility">Wróć <class="btn btn-light" /></a>
