--- a/Projekt/Pages/Shared/_Layout.cshtml
+++ b/Projekt/Pages/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/CreateJob">Utwórz prace</a>
                         </li>
                         <li>
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Report/Index">Zarządzaj zgłoszeniami</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/PanelAdmin">Panel admin</a>
                         </li>
                         <li>
                             <a class="nav-link text-dark" asp-area="" asp-page="/Email/Index">Skrzynka Odbiorcza</a>
