--- a/Projekt/Pages/JobSchedule.cshtml
+++ b/Projekt/Pages/JobSchedule.cshtml
@@ -22,31 +22,79 @@
         font-size: 15px;
     }
 
-    table, th, td {
-        border: 1px solid black;
-        width: 10px;
+    table {
+        border-collapse: separate;
+        border-spacing: 0;
+        min-width: 350px;
     }
 
-</style>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                Start
-            </th>
-            <th>
-                Koniec
-            </th>
-            <th>
-                Obowiązek
-            </th>
-            <th></th>
-        </tr>
-    </thead>
+        table tr th,
+        table tr td {
+            border-right: 1px solid #bbb;
+            border-bottom: 1px solid #bbb;
+            padding: 5px;
+        }
 
-    <tbody> 
-        @foreach (var item in Model.Jobs)
-        {
+            table tr th:first-child,
+            table tr td:first-child {
+                border-left: 1px solid #bbb;
+            }
+
+        table tr th {
+            background: #eee;
+            border-top: 1px solid #bbb;
+        }
+
+        /* top-left border-radius */
+        table tr:first-child th:first-child {
+            border-top-left-radius: 6px;
+        }
+
+        /* top-right border-radius */
+        table tr:first-child th:last-child {
+            border-top-right-radius: 6px;
+        }
+
+        /* bottom-left border-radius */
+        table tr:last-child td:first-child {
+            border-bottom-left-radius: 6px;
+        }
+
+        /* bottom-right border-radius */
+        table tr:last-child td:last-child {
+            border-bottom-right-radius: 6px;
+        }
+
+    a {
+        color: inherit; /* blue colors for links too */
+        text-decoration: inherit; /* no underline */
+    }
+
+    .font-style {
+        font-family: 'Space Mono', monospace;
+    }
+</style>
+
+<div class="text-center font-style">
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    Rozpoczęcie
+                </th>
+                <th>
+                    Zakończenie
+                </th>
+                <th>
+                    Obowiązek
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+
+        <tbody>
+            @foreach (var item in Model.Jobs)
+            {
                 <tr>
                     <td>
                         @Html.DisplayFor(modelItem => item.JobStartDate)
@@ -58,16 +106,17 @@
                         @Html.DisplayFor(modelItem => item.Responsibility)
                     </td>
                     <td>
-                     @if (@item.WorkerMail==null)
-                     {
-                        <a asp-page="./AddResponsibility" asp-route-id="@item.Id"><input type="submit" value="Wybierz" class="btn btn-primary" /></a>
-                    }
-                    else
-                    {
-                        <button type="button" class="btn btn-secondary" style="pointer-events: none;">Zarezerwowane</button>
-                    }
-                </td>
+                        @if (@item.WorkerMail == null)
+                        {
+                            <a asp-page="./AddResponsibility" asp-route-id="@item.Id"><input type="submit" value="Wybierz" class="btn btn-primary" /></a>
+                        }
+                        else
+                        {
+                            <button type="button" class="btn btn-secondary" style="pointer-events: none;">Zarezerwowane</button>
+                        }
+                    </td>
                 </tr>
-        }
-    </tbody>
-</table>
+            }
+        </tbody>
+    </table>
+</div>
