--- a/Projekt/Pages/PanelAdmin.cshtml
+++ b/Projekt/Pages/PanelAdmin.cshtml
@@ -2,3 +2,95 @@
 @model Projekt.Pages.PanelAdminModel
 @{
 }
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
+
+<style>
+    table {
+        border-collapse: separate;
+        border-spacing: 0;
+        min-width: 350px;
+    }
+
+        table tr th,
+        table tr td {
+            border-right: 1px solid #bbb;
+            border-bottom: 1px solid #bbb;
+            padding: 5px;
+        }
+
+            table tr th:first-child,
+            table tr td:first-child {
+                border-left: 1px solid #bbb;
+            }
+
+        table tr th {
+            border-top: 1px solid #bbb;
+        }
+
+        /* top-left border-radius */
+        table tr:first-child th:first-child {
+            border-top-left-radius: 6px;
+        }
+
+        /* top-right border-radius */
+        table tr:first-child th:last-child {
+            border-top-right-radius: 6px;
+        }
+
+        /* bottom-left border-radius */
+        table tr:last-child td:first-child {
+            border-bottom-left-radius: 6px;
+        }
+
+        /* bottom-right border-radius */
+        table tr:last-child td:last-child {
+            border-bottom-right-radius: 6px;
+        }
+
+    a {
+        color: inherit; /* blue colors for links too */
+        text-decoration: inherit; /* no underline */
+    }
+
+    .font-style {
+        font-family: 'Space Mono', monospace;
+    }
+</style>
+
+<body>
+    <div class="font-style">
+        <h2>A basic HTML table</h2>
+        <div class="text-center">
+            <table style="width:100%">
+                <tr>
+                    <th height="250" width="648">
+                        <a asp-page="/Report/Index">
+                            <h4>Rozpatrz zgłoszenia o zaginięciu</h4><br />
+                            <img src="/MissingAnimal.png" width="64" height="64" />
+                        </a>
+                    </th>
+                    <th>Utwórz </th>
+                </tr>
+                <tr>
+                    <td height="250" width="648">
+                        <a asp-page="/CreateJob">
+                            <h4>Utwórz harmonogoram pracy</h4><br />
+                            <img src="/AddJob.png" width="64" height="64" />
+                        </a>
+                    </td>
+                    <td height="250" width="648">
+                        <a asp-page="/CreateJob">
+                            <h4>Rozpatrz zgłoszenia do pracy</h4><br />
+                            <img src="/AcceptVolunteers.png" width="64" height="64" />
+                        </a>
+                    </td>
+                </tr>
+            </table>
+        </div>
+
+        <p>To undestand the example better, we have added borders to the table.</p>
+    </div>
+</body>
